# elsa-diagrams

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SPEC.md  TODO.md  package.json
.github/workflows/: ci.yml  release.yml
apps/vscode-extension/: .vscodeignore  CHANGELOG.md  QUICKSTART.md  README.md  esbuild.config.mjs  package-lock.json  package.json
apps/vscode-extension/scripts/: copy-wasm.mjs
apps/vscode-extension/src/: convert.ts  detect.ts  extension.ts  preview.ts
apps/vscode-extension/src/webview/: app.ts  parseSpec.ts
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: App.tsx  index.css  sample.ts
apps/web/src/adrs/: 0001-audit-pattern.md  index.ts
apps/web/src/components/: Convert.tsx  DownloadModal.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Logo.tsx  Paper.tsx
apps/web/src/examples/: index.ts  workflow-a-filewatcher.json  workflow-b-csv2json.json  workflow-c-audit.json
apps/web/src/lib/: parseSpec.ts  renderInline.tsx  renderMarkdown.tsx
apps/web/src/pages/: AdrsPage.tsx  HomePage.tsx  LibraryPage.tsx
crates/elsa_mermaid/: Cargo.toml
crates/elsa_mermaid/src/: detect.rs  ir.rs  label.rs  lib.rs  normalize.rs  render.rs  spec.rs  wasm.rs
crates/elsa_mermaid/tests/: normalize_v2.rs  normalize_v3.rs  render_snapshots.rs
crates/elsa_mermaid_cli/: Cargo.toml
crates/elsa_mermaid_cli/src/: main.rs
reports/trust/: summary.md
scripts/: build-cli-npm-packages.mjs  bump-version.mjs  sync-license.mjs
tests/fixtures/: v2_document_approval.json  v2_if_branch.json  v3_composite.json  v3_hello_world.json
