[workspace]
members = [
    "crates/elsa_mermaid",
    "crates/elsa_mermaid_cli",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license-file = "LICENSE.md"
authors = ["Ari Ugwu <ari@thirteendelta.com>"]
repository = "https://github.com/ariugwu/elsa-to-mermaid"
homepage = "https://github.com/ariugwu/elsa-to-mermaid"
keywords = ["elsa", "workflow", "mermaid", "flowchart", "diagram"]
categories = ["command-line-utilities", "visualization", "parsing"]
